[ FIX ] height shift on uploader heart when not caching the images

--- a/src/components/gfx/KvUploaderLike.scss
+++ b/src/components/gfx/KvUploaderLike.scss
@@ -1,10 +1,11 @@
-.kv-uploader-like{
+.kv-uploader-like {
   padding: 0;
 }
 
 .kv-uploader-like,
 .kv-uploader-like-display {
   width: 28px;
+  height: 28px;
   position: relative;
 
   .svg-icon {
